// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/single/_level.vue renders loaded 1`] = `
<section
  class="section"
>
  <h1
    class="title"
  >
    SINGLE 19
  </h1>
   
  <div
    class="b-table"
  >
    <!---->
     
    <!---->
     
    <div
      class="table-wrapper"
    >
      <table
        class="table is-striped"
      >
        <!---->
         
        <tbody>
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Series"
            >
              
        2014
      
            </td>
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          EGOISM 440
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Difficulty"
            >
              
        CHALLENGE
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Series"
            >
              
        A
      
            </td>
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          ENDYMION
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Difficulty"
            >
              
        CHALLENGE
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Series"
            >
              
        A
      
            </td>
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          MAX 360
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Difficulty"
            >
              
        CHALLENGE
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Series"
            >
              
        2014
      
            </td>
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          Over The “Period”
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Difficulty"
            >
              
        CHALLENGE
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Series"
            >
              
        X3 VS 2ndMIX
      
            </td>
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          PARANOiA Revolution
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Difficulty"
            >
              
        CHALLENGE
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Series"
            >
              
        X2
      
            </td>
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          POSSESSION
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Difficulty"
            >
              
        CHALLENGE
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Series"
            >
              
        X2
      
            </td>
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          Valkyrie dimension
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Difficulty"
            >
              
        CHALLENGE
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
        </tbody>
         
        <!---->
      </table>
    </div>
     
    <div
      class="level"
    >
      <div
        class="level-left"
      />
       
      <div
        class="level-right"
      >
        <div
          class="level-item"
        >
          <nav
            class="pagination"
          >
            <a
              class="pagination-link pagination-previous"
              disabled="disabled"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-left mdi-24px"
                />
              </span>
            </a>
             
            <a
              class="pagination-link pagination-next"
              disabled="disabled"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-right mdi-24px"
                />
              </span>
            </a>
             
            <ul
              class="pagination-list"
            >
              <!---->
               
              <!---->
               
              <li>
                <a
                  aria-current="true"
                  class="pagination-link is-current "
                  href="#"
                  role="button"
                >
                  1
                </a>
              </li>
               
              <!---->
               
              <!---->
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`/single/_level.vue renders loading 1`] = `
<section
  class="section"
>
  <h1
    class="title"
  >
    SINGLE 19
  </h1>
   
  <div
    class="b-table is-loading"
  >
    <!---->
     
    <!---->
     
    <div
      class="table-wrapper"
    >
      <table
        class="table is-striped"
      >
        <!---->
         
        <tbody>
          <tr
            class="is-empty"
          >
            <td
              colspan="0"
            >
              <section
                class="section"
              >
                <div
                  class="content has-text-grey has-text-centered"
                >
                  <p>
                    Nothing here.
                  </p>
                </div>
              </section>
            </td>
          </tr>
        </tbody>
         
        <!---->
      </table>
    </div>
     
    <div
      class="level"
    >
      <div
        class="level-left"
      />
       
      <div
        class="level-right"
      >
        <div
          class="level-item"
        >
          <nav
            class="pagination"
          >
            <a
              class="pagination-link pagination-previous"
              disabled="disabled"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-left mdi-24px"
                />
              </span>
            </a>
             
            <a
              class="pagination-link pagination-next"
              disabled="disabled"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-right mdi-24px"
                />
              </span>
            </a>
             
            <ul
              class="pagination-list"
            >
              <!---->
               
              <!---->
                
              <!---->
               
              <!---->
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</section>
`;
